# HidPlugin

./: .gitignore  .gitmodules  README.md
hidplugin/: CMakeLists.txt  HidPlugin.cpp  HidPlugin.h
hidplugintest/: CMakeLists.txt  hidplugintest.cpp
